TC-359: alignment fix for chrome and edge

--- a/source/_patterns/03-organisms/sections/text-section-aside/_text-section-aside.scss
+++ b/source/_patterns/03-organisms/sections/text-section-aside/_text-section-aside.scss
@@ -29,8 +29,7 @@
       @include u-font(heading, 12);
 
       @include at-media(desktop) {
-        padding-top: 1.1rem;
-        @include u-padding-bottom(2);
+        padding-top: 1.13rem;
         @include has-dash-position($dash-color: "mint-cool-50v", $dash-position: "right");
       }
     }
@@ -62,6 +61,15 @@
       @include u-font(ui, 8);
       @include u-padding-top(4);
       @include u-padding-bottom(2);
+    }
+  }
+}
+
+@include at-media(desktop) {
+  //Title horizonal rule fix for Firefox
+  @-moz-document url-prefix() {
+    .jcc-text-section-aside__content .jcc-card__title {
+      padding-top: 1.1rem !important;
     }
   }
 }
